# data-warehouse-metadata

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  FINAL_STATUS_REPORT.md  LOCALIZATION_GUIDE.md  LOCALIZATION_STATUS.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RECOVERY_STATUS.md  SYSTEM_TEST_REPORT.md  data-warehouse-metadata-portal.html  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-java/: .gitignore  CACHE_OPTIMIZATION.md  DATABASE_OPTIMIZATION.md  DATABASE_SETUP.md  Dockerfile  ELASTICSEARCH_CONFIGURATION.md  Makefile  README.md  REDIS_CONFIGURATION.md  SECURITY_CONFIGURATION.md  SECURITY_GUIDE.md  TASK_1.5_COMPLETION_SUMMARY.md  TASK_1.6_ASYNC_CONFIGURATION.md  TASK_1.7_SWAGGER_CONFIG.md  TASK_3.2_COMPLETION_SUMMARY.md  TASK_3.4_COMPLETION_SUMMARY.md  TASK_4.1_COMPLETION_SUMMARY.md  TASK_4.2_JWT_AUTHENTICATION_FILTER.md  TASK_4.3_COMPLETION_SUMMARY.md  docker-compose.yml  pom.xml
backend-java/docs/: ELASTICSEARCH_QUICK_START.md  REDIS_QUICK_START.md  SECURITY_QUICK_START.md
backend/alembic/: README  env.py
backend/app/: main.py
backend/app/core/: config.py  database.py
docker/mysql/: init.sql
docker/nginx/: nginx.conf
frontend/: .env.example  Dockerfile  PERFORMANCE_OPTIMIZATION.md  README.md  TESTING_CHECKLIST.md  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/docker/: nginx.conf
scripts/: batch_translate.py  final_translator.py  fix_all_translations.py  fix_encoding.py  fix_garbled_comments.py  fix_utf8_comments.py  restore_files.py  safe_comment_translator.py  safe_translate_comments.py  smart_translate.py  translate_comments.py
(+168 files in other folders)
